@@ -1,3 +1,3 @@
 #!/bin/sh
 cd /joverseer
-java -Xmx512M -jar joverseer.jar -Djava.net.preferIPv4Stack=true
+java -Xmx512M --add-exports java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED -Djava.net.preferIPv4Stack=true -jar joverseer.jar $1
